@@ -1,3 +1,3 @@
-EBUILD clementine-9999.ebuild 2164 RMD160 a670c8354eda82c57d4ab545ba29f1f873fc29aa SHA1 4d8e368d4201f8cf5d579645bbbda79d5724fba8 SHA256 8dbaf3835583c88d4548f94167beac7184f0939dc9453eae70a9d6b87c00f724
-MISC ChangeLog 363 RMD160 3a69039479935fada3a0f8c66f9e54cb93cbc323 SHA1 c1d6b55bdea697e86a00b0e397754a14de54d40f SHA256 67b8e8c1fc44f4ca88748412389185c78617bb31d7bfb532d483e87b4b965fa5
+EBUILD clementine-9999.ebuild 2501 RMD160 719e075ddeea10421f69b965a5dab5b06b732603 SHA1 a919df4fc1b9248bf1c516d8e7d50812efdaf8a4 SHA256 c15bf7dede58a0dc983b85ceaa6a5573b02b1e43c42866a7e13aac3bd1aa2268
+MISC ChangeLog 492 RMD160 3fd86425f63beda8b7477482203237331daf468b SHA1 d8ce153fbe14c307213d0b983da22abed8bc5b3c SHA256 6f46af4af2f02f8dfe064479e73a776d515ecc8739358800fc2ab269afa5ea72
 MISC metadata.xml 366 RMD160 57edb246583996360d3f18a67246f9edf7d4698b SHA1 a0b336051f74e47a50e4978d038e9ebc8a4c55da SHA256 d814214186c00863c84944669888779fd113f4a37692134522b5d289835e9666
