@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Jun 2010; Nikoli <nikoli@lavabit.com> clementine-9999.ebuild:
+  gstreamer is default, fixed vlc and phonon deps, cosmetics
+
   12 Jun 2010; Nikoli <nikoli@lavabit.com> clementine-9999.ebuild:
   upstream now supports LINGUAS
 
